--- a/WPadmin-icon-sets/stylesheet.css
+++ b/WPadmin-icon-sets/stylesheet.css
@@ -5,7 +5,7 @@
  * @subpackage assets/themes
  */
 
-/* Import WPadmin style (already includes colors.css & jscalendar) */
+/* Import WPadmin style (already includes colors.css & jscalendar & colorbox) */
 @import url("../WPadmin/stylesheet.css");
 
 /* Replace the modules icons & set size to 36px instead of 32px */
@@ -82,4 +82,15 @@ img[src="modules/Students/icon.png"] {
 
 img[src="modules/Users/icon.png"] {
 	background-image: url("modules/Users.png");
+}
+
+
+/* Login page background photo */
+body.login {
+	background-image: url('background/fall-colours.jpg');
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	min-height: 100%;
+	min-height: calc( 100% - 84px );
 }
